feat : modify controller with new version of Detection Model
