# dapia_detection_api/controllers/default_controller.py
@@ -1,6 +1,5 @@
 import numpy as np
-import pandas as pd
-from AircraftClassifier import predictAircraftType, probabilityToLabel, labelToName, CONTEXT
+from AdsbAnomalyDetector import predictAircraftType, probabilityToLabel, labelToName, getTruthLabelFromIcao
 
 from dapia_detection_api.types.fields import AdsbMessageField
 
@@ -22,48 +21,53 @@ def classify_aircraft(body):  # noqa: E501
 
     :rtype: Union[SendMessagePost200Response, Tuple[SendMessagePost200Response, int], Tuple[SendMessagePost200Response, int, Dict[str, str]]
     """
+    orginalMessage = body["message"]
     message = body["message"]
-    icao = message[AdsbMessageField.ICAO]
 
-    if icao not in message_by_icao:
-        message_by_icao[icao] = []
-    message_by_icao[icao].append(message)
-    messages = message_by_icao[icao][-CONTEXT.HISTORY:]
+    try:
+        icao = message[AdsbMessageField.ICAO]
 
-    if len(messages) == CONTEXT.HISTORY:
-        df = (pd.DataFrame(messages)
-              .replace('', np.NaN)
-              .fillna(method='ffill')
-              .fillna(method='bfill')
-              .fillna(value=0))
+        predictions = {}
+        predictions[icao] = []
+        message[AdsbMessageField.TIMESTAMP] = int(orginalMessage[AdsbMessageField.TIMESTAMP])
+        message[AdsbMessageField.LATITUDE] = float(orginalMessage[AdsbMessageField.LATITUDE])
+        message[AdsbMessageField.LONGITUDE] = float(orginalMessage[AdsbMessageField.LONGITUDE])
+        message[AdsbMessageField.GROUND_SPEED] = float(orginalMessage[AdsbMessageField.GROUND_SPEED])
+        message[AdsbMessageField.TRACK] = float(orginalMessage[AdsbMessageField.TRACK])
+        message[AdsbMessageField.VERTICAL_RATE] = float(orginalMessage[AdsbMessageField.VERTICAL_RATE])
 
-        try:
-            probability = predictAircraftType(
-                np.array([np.int64(value) for value in df[AdsbMessageField.TIMESTAMP]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.LATITUDE]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.LONGITUDE]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.GROUND_SPEED]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.TRACK]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.VERTICAL_RATE]]).reshape([1, 128]),
-                np.array([np.bool_(value) for value in df[AdsbMessageField.ON_GROUND]]).reshape([1, 128]),
-                np.array([np.bool_(value) for value in df[AdsbMessageField.ALERT]]).reshape([1, 128]),
-                np.array([np.bool_(value) for value in df[AdsbMessageField.SPI]]).reshape([1, 128]),
-                np.array([np.int64(value) for value in df[AdsbMessageField.SQUAWK]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.ALTITUDE]]).reshape([1, 128]),
-                np.array([np.float64(value) for value in df[AdsbMessageField.GEO_ALTITUDE]]).reshape([1, 128])
-            )
-            response = {'message': message, 'prediction': probability_to_name(probability)}
-        except Exception as e:
-            response = {'message': message, 'error': f'{e}'}, 500
+        message[AdsbMessageField.ALTITUDE] = float(orginalMessage[AdsbMessageField.ALTITUDE])
+        message[AdsbMessageField.GEO_ALTITUDE] = float(orginalMessage[AdsbMessageField.GEO_ALTITUDE])
 
-        return response
-    else:
-        return {'message': message, 'prediction': "Not available"}
+        if message[AdsbMessageField.SQUAWK] != "NaN":
+            message[AdsbMessageField.SQUAWK] = int(orginalMessage[AdsbMessageField.SQUAWK])
+        else:
+            message[AdsbMessageField.SQUAWK] = None
 
+        if message[AdsbMessageField.ON_GROUND] == "True":
+            message[AdsbMessageField.ON_GROUND] = True
+        else:
+            message[AdsbMessageField.ON_GROUND] = False
 
-def probability_to_name(probability):
-    label = probabilityToLabel(probability)
-    name = labelToName(label)
-    if len(name) > 0:
-        return name[0]
-    return 'Unavailable'
+        if message[AdsbMessageField.ALERT] == "True":
+            message[AdsbMessageField.ALERT] = True
+        else:
+            message[AdsbMessageField.ALERT] = False
+
+        if message[AdsbMessageField.SPI] == "True":
+            message[AdsbMessageField.SPI] = True
+        else:
+            message[AdsbMessageField.SPI] = False
+
+        a = predictAircraftType([message])
+        for icao, proba in a.items():
+            predictions[icao].append(proba)
+
+        labels_flight_1 = probabilityToLabel(predictions[icao])
+        major_label_flight_1 = np.bincount(labels_flight_1).argmax()
+        truth = getTruthLabelFromIcao(icao)
+
+        return {'message': orginalMessage, 'prediction': labelToName(major_label_flight_1),
+                'truth': labelToName(truth)}, 200
+    except Exception as e:
+        return {'message': orginalMessage, 'error': f'{e}'}, 500
