# dapia_detection_api/models/response500_classify_aircraft.py
@@ -1,0 +1,63 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from dapia_detection_api.models.base_model import Model
+from dapia_detection_api.models.data1 import Data1
+from dapia_detection_api import util
+
+from dapia_detection_api.models.data1 import Data1  # noqa: E501
+
+class Response500ClassifyAircraft(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, data=None):  # noqa: E501
+        """Response500ClassifyAircraft - a model defined in OpenAPI
+
+        :param data: The data of this Response500ClassifyAircraft.  # noqa: E501
+        :type data: Data1
+        """
+        self.openapi_types = {
+            'data': Data1
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Response500ClassifyAircraft':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Response_500_Classify_Aircraft of this Response500ClassifyAircraft.  # noqa: E501
+        :rtype: Response500ClassifyAircraft
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> Data1:
+        """Gets the data of this Response500ClassifyAircraft.
+
+
+        :return: The data of this Response500ClassifyAircraft.
+        :rtype: Data1
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: Data1):
+        """Sets the data of this Response500ClassifyAircraft.
+
+
+        :param data: The data of this Response500ClassifyAircraft.
+        :type data: Data1
+        """
+
+        self._data = data
